[tool.poetry]
name = "chatsite"
version = "0.1.0"
description = ""
authors = ["Asger Hautop Drewsen <asgerdrewsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.4"
channels = "^2.4.0"
channels_redis = "^2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
